<resources>
    <string name="text_view">Nothing</string>
    <string name="ButtonLeft">←</string>
    <string name="ButtonRight">→</string>
    <string name="ButtonPlaceMan">Place</string>
    <string name="TextViewState">NULL</string>
    <string name="ButtonRestart">RESTART</string>
    <string name="ButtonDevMode">Toggle Dev Mode</string>
    <string name="TextViewColumnIndicator">"       ^"</string>
    <string name="buttonPlay">PLAY</string>
    <string name="buttonOptions">OPTIONS</string>
    <string name="buttonExit">EXIT</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="Language">Language</string>
    <string name="game_settings">Game settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="app_name">FourInARow</string>
    <string name="summary_difficulty">The higher, the harder</string>
    <string name="summary_starting">Who makes the first move</string>
    <string name="title_starting">Starting turns</string>
    <string name="val1_starting">I always go first</string>
    <string name="val2_starting">The IA always goes first</string>
    <string name="val3_starting">It\'s decided at random</string>
    <string name="val1_consecutive">The winner goes first</string>
    <string name="val2_consecutive">The looser goes first</string>
    <string name="val3_consecutive">It\'s decided at random</string>
    <string name="summary_consecutive">Who starts when playing consecutive games</string>
    <string name="title_consecutive">Starting consecutive games</string>
    <string name="title_difficulty">Change the difficulty</string>
    <string name="title_devmode">Toggle Developer Mode</string>
    <string name="title_experimental">Toggle experimental mode</string>
    <string name="summary_experimental">Makes the IA smarter (only for high-end machines)</string>
</resources>