<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Language">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/languages"
            app:entryValues="@array/languagesCode"
            app:key="language"
            app:title="Choose your language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/game_settings">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/starting"
            app:entryValues="@array/val_starting"
            app:key="starting"
            app:summary="@string/summary_starting"
            app:title="@string/title_starting"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/consecutive"
            app:entryValues="@array/val_consecutive"
            app:key="consecutive"
            app:summary="@string/summary_consecutive"
            app:title="@string/title_consecutive"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:defaultValue="6"
            app:entries="@array/difficulties"
            app:entryValues="@array/difficulties"
            app:key="difficulty"
            app:summary="@string/summary_difficulty"
            app:title="@string/title_difficulty"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreferenceCompat
            app:key="experimental"
            app:title="@string/title_experimental"
            app:summary="@string/summary_experimental"
            app:defaultValue="false"
            />

        <SwitchPreferenceCompat
            app:key="devmode"
            app:title="@string/title_devmode"
            app:defaultValue="false"
            />

    </PreferenceCategory>

</PreferenceScreen>